# kompare

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  DESIGN  Mainpage.dox  Makefile.am  Messages.sh  README  TODO  compile_commands.json  kcomparedialog.cpp  kcomparedialog.h  kompare.desktop  kompare_shell.cpp  kompare_shell.h  komparenavigationpart.desktop  kompareui.rc  kompareurldialog.cpp  kompareurldialog.h  kompareviewpart.desktop  main.cpp  org.kde.kompare.appdata.xml  org.kde.kompare.desktop  snapcraft.yaml
.cache/clangd/index/: diffpage.cpp.4EED56D6E22922D0.idx  diffpage.h.2618344667E8681F.idx  (+32 more)
doc/: CMakeLists.txt  index.docbook
interfaces/: CMakeLists.txt  Makefile.am  kompareinterface.cpp  kompareinterface.h  kompareinterfaceexport.h
komparenavtreepart/: CMakeLists.txt  Makefile.am  komparenavtreepart.cpp  komparenavtreepart.desktop  komparenavtreepart.h
komparepart/: CMakeLists.txt  Makefile.am  difference.cpp  difference.h  diffhunk.cpp  diffhunk.h  diffmodel.cpp  diffmodel.h  diffprefs.cpp  diffprefs.h  diffsettings.cpp  diffsettings.h  generalprefs.cpp  generalprefs.h  generalsettings.cpp  generalsettings.h  kompare.h  kompare_actions.cpp  kompare_actions.h  kompare_part.cpp  kompare_part.desktop  kompare_part.h  kompare_part.qrc  kompare_partfactory.cpp  kompare_partfactory.h  kompare_qsplitter.h  kompareconnectwidget.cpp  kompareconnectwidget.h  komparelistview.cpp  komparelistview.h  komparemodellist.cpp  komparemodellist.h  komparenavigationtree.cpp  komparenavigationtree.h  komparepart.desktop  komparepartui.rc  kompareprefdlg.cpp  kompareprefdlg.h  kompareprocess.cpp  kompareprocess.h  (+21 more)
libdialogpages/: CMakeLists.txt  Makefile.am  dialogpagesexport.h  diffpage.cpp  diffpage.h  diffsettings.cpp  diffsettings.h  filespage.cpp  filespage.h  filessettings.cpp  filessettings.h  pagebase.cpp  pagebase.h  settingsbase.cpp  settingsbase.h  viewpage.cpp  viewpage.h  viewsettings.cpp  viewsettings.h
libdiff2/: CMakeLists.txt  Makefile.am  cvsdiffparser.cpp  cvsdiffparser.h  diff2export.h  difference.cpp  difference.h  diffhunk.cpp  diffhunk.h  diffmodel.cpp  diffmodel.h  diffmodellist.cpp  diffmodellist.h  diffparser.cpp  diffparser.h  kompare.h  komparemodellist.cpp  komparemodellist.h  kompareprocess.cpp  kompareprocess.h  levenshteintable.cpp  levenshteintable.h  parser.cpp  parser.h  parserbase.cpp  parserbase.h  perforceparser.cpp  perforceparser.h
libdiff2/tests/: CMakeLists.txt
pics/: CMakeLists.txt  Makefile.am  kompare128.svgz  sc-apps-kompare.svgz
po/af/: kompare.po
po/ar/: kompare.po
po/be/: kompare.po
po/bg/: kompare.po
po/br/: kompare.po
po/bs/: kompare.po
po/ca/: kompare.po
po/ca@valencia/: kompare.po
po/cs/: kompare.po
po/cy/: kompare.po
po/da/: kompare.po
po/de/: kompare.po
po/el/: kompare.po
po/en_GB/: kompare.po
po/eo/: kompare.po
po/es/: kompare.po
po/et/: kompare.po
po/eu/: kompare.po
po/fa/: kompare.po
po/fi/: kompare.po
po/fr/: kompare.po
po/ga/: kompare.po
po/gl/: kompare.po
po/he/: kompare.po
po/hi/: kompare.po
po/hne/: kompare.po
po/hr/: kompare.po
po/hu/: kompare.po
po/ia/: kompare.po
po/is/: kompare.po
po/it/: kompare.po
po/ja/: kompare.po
po/ka/: kompare.po
po/kk/: kompare.po
po/km/: kompare.po
po/ko/: kompare.po
po/lt/: kompare.po
po/lv/: kompare.po
po/mai/: kompare.po
po/mk/: kompare.po
po/mr/: kompare.po
po/ms/: kompare.po
po/nb/: kompare.po
po/nds/: kompare.po
po/ne/: kompare.po
po/nl/: kompare.po
po/nn/: kompare.po
po/oc/: kompare.po
po/pa/: kompare.po
po/pl/: kompare.po
po/pt/: kompare.po
po/pt_BR/: kompare.po
po/ro/: kompare.po
po/ru/: kompare.po
po/sa/: kompare.po
po/se/: kompare.po
po/sk/: kompare.po
po/sl/: kompare.po
po/sq/: kompare.po
po/sr/: kompare.po
po/sr@ijekavian/: kompare.po
po/sr@ijekavianlatin/: kompare.po
po/sr@latin/: kompare.po
po/sv/: kompare.po
po/ta/: kompare.po
po/tg/: kompare.po
po/tr/: kompare.po
po/ug/: kompare.po
po/uk/: kompare.po
po/xh/: kompare.po
po/zh_CN/: kompare.po
po/zh_TW/: kompare.po
servicemenus/: CMakeLists.txt  kompare.desktop
src/: CMakeLists.txt  Messages.sh  kompareviewpart.desktop
src/app/: CMakeLists.txt  kompare_shell.cpp  kompare_shell.h  kompare_shell.qrc  kompareui.rc  kompareurldialog.cpp  kompareurldialog.h  main.cpp  org.kde.kompare.appdata.xml  org.kde.kompare.desktop
src/app/welcomeview/: welcomeview.cpp  welcomeview.h  welcomeview.ui
src/dialogpages/: CMakeLists.txt  diffpage.cpp  diffpage.h  filespage.cpp  filespage.h  filessettings.cpp  filessettings.h  settingsbase.cpp  settingsbase.h  viewpage.cpp  viewpage.h  viewsettings.cpp  viewsettings.h
src/interfaces/: CMakeLists.txt  kompareinterface.cpp  kompareinterface.h
src/komparenavtreepart/: CMakeLists.txt  komparenavtreepart.cpp  komparenavtreepart.desktop  komparenavtreepart.desktop.in  komparenavtreepart.h  komparenavtreepart.json.in
src/komparepart/: CMakeLists.txt  kompare_part.cpp  kompare_part.h  kompare_partfactory.cpp  kompare_partfactory.h  kompareconnectwidget.cpp  kompareconnectwidget.h  komparelistview.cpp  komparelistview.h  komparepart.desktop  komparepart.desktop.in  komparepart.json.in  kompareprefdlg.cpp  kompareprefdlg.h  komparesaveoptionsbase.cpp  komparesaveoptionsbase.h  komparesaveoptionswidget.cpp  komparesaveoptionswidget.h  komparesplitter.cpp  komparesplitter.h  kompareview.cpp  kompareview.h
src/servicemenus/: CMakeLists.txt  kompare.desktop
tests/: contextp.diff  unifiedp.diff
tests/cvsdiff/: context.diff  contextm.diff  ed.diff  edm.diff  normal.diff  normalm.diff  rcs.diff  rcsm.diff  unified.diff  unifiedm.diff
tests/diff/: context.diff  contextm.diff  edm.diff  normalm.diff  rcsm.diff  unified.diff  unifiedm.diff
tests/perforce/: context.diff  contextm.diff  rcs.diff  rcsm.diff  unified.diff  unifiedm.diff
tests/subversion/: context.diff  contextm.diff  ed.diff  edm.diff  normal.diff  normalm.diff  rcs.diff  rcsm.diff  unified.diff  unifiedm.diff
(+12 files in other folders)
